--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="./past.jpg" alt=""> <br>
+    <img src="./img/cuin.jpeg" alt="A happy chef"> <br>
     <a href="./homemade.html">Pasta</a>
+    <a href="./sandwich.html"></a>
 </body>
 </html>
