--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <img src="./img/cuin.jpeg" alt="A happy chef"> <br>
-    <a href="./homemade.html">Pasta</a>
-    <a href="./sandwich.html"></a>
+    <ul>
+        <li><a href="./homemade.html">Pasta</a></li>
+        <li><a href="./sandwich.html">Reuben Sandwich</a></li>
+    </ul>
 </body>
 </html>
