css addes I added a css file so the recipe web is more clean, this style has is focues on the box model but also has color

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <img src="./img/cuin.jpeg" alt="A happy chef"> <br>
-    <ul>
-        <li><a href="./homemade.html">Pasta</a></li>
-        <li><a href="./sandwich.html">Reuben Sandwich</a></li>
-    </ul>
+
+<body class="b1">
+    <h1 class="tit">Odin Recipes</h1>
+    <img src="./img/cuin.jpeg" alt="A happy chef" class="ima"> <br>
+    <div class="div1">
+        <p>Odin is known as the biggest restaurant chain on the entire world due to his dishes and cookers, as an ex-odin cooker I will show two of they Recipes</p>
+        <ul>
+            <li><a href="./homemade.html">Pasta</a></li>
+            <li><a href="./sandwich.html">Reuben Sandwich</a></li>
+        </ul>
+    </div>
 </body>
+
 </html>
