--- a/sandwich.html
+++ b/sandwich.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Reuben Sandwich</title>
 </head>
-<body>
-    <h1>Sandwich</h1>
-    <img src="./img/sandwich.jpeg" alt="Perfect sandwich">
-    <p>This dish was made for the first time on 1992 by Alfon Sito on the cold Sweden, Alfon used only 3 ingredients <br></p>
-    <p>ham, cheese and toasted bread, combining this he got an easy and good recipe, but we are going to perfect it</p>
-    <ul><h2>Ingredients</h2>
-        <li>8 slices bread</li>
-        <li>1/2 cup Thousand Island dressing</li>
-        <li>8 slices of cheese</li>
-        <li>8 slices corned beef</li>
-        <li>1 cup sauerkraut, drained</li>
-        <li>2 tabblestones butter</li>
-    </ul>
 
-    <ol><h2>Steps</h2>
-        <li>Step 1: Preheat a large griddle or skillet over medium heat</li> <br>
-        <li>Step 2: Spread one side of bread slices evenly with Thousand Island dressing. On four bread slices, layer one slice Swiss cheese, 2 slices corned beef, 1/4 cup sauerkraut, and a second slice of Swiss cheese. Top with remaining bread slices, dressing-side down. Butter the top of each sandwich.</li> <br>
-        <li>Step 3: Place sandwiches, butter-side down on the preheated griddle; butter the top of each sandwich with remaining butter. Grill until both sides are golden brown, about 5 minutes per side. Serve hot.</li> <br>
-    </ol>
+<body class="b1">
+    <h1 class="tit">Sandwich</h1>
+    <img src="./img/sandwich.jpeg" alt="Perfect sandwich" class="ima">
+    <div class="div1">
+        <p>This dish was made for the first time on 1992 by Alfon Sito on the cold Sweden, Alfon used only 3 ingredients
+            <br></p>
+        <p>ham, cheese and toasted bread, combining this he got an easy and good recipe, but we are going to perfect it
+        </p>
+        <ul>
+            <h2>Ingredients</h2>
+            <li>8 slices bread</li>
+            <li>1/2 cup Thousand Island dressing</li>
+            <li>8 slices of cheese</li>
+            <li>8 slices corned beef</li>
+            <li>1 cup sauerkraut, drained</li>
+            <li>2 tabblestones butter</li>
+        </ul>
+
+        <ol>
+            <h2>Steps</h2>
+            <li>Step 1: Preheat a large griddle or skillet over medium heat</li> <br>
+            <li>Step 2: Spread one side of bread slices evenly with Thousand Island dressing. On four bread slices,
+                layer one slice Swiss cheese, 2 slices corned beef, 1/4 cup sauerkraut, and a second slice of Swiss
+                cheese. Top with remaining bread slices, dressing-side down. Butter the top of each sandwich.</li> <br>
+            <li>Step 3: Place sandwiches, butter-side down on the preheated griddle; butter the top of each sandwich
+                with remaining butter. Grill until both sides are golden brown, about 5 minutes per side. Serve hot.
+            </li> <br>
+        </ol>
+    </div>
 </body>
+
 </html>
